# girdsandboxes

./: .gitignore  CMakeLists.txt  GridAndBoxes.exe.stackdump  README.md  main.cpp  test.py  testContainer.exe.stackdump
engine/: CMakeLists.txt  engine.hpp
engine/container/: CMakeLists.txt  container.hpp
engine/container/lib/: box.hpp  coord.hpp  general.hpp  grid.hpp  object.hpp
engine/container/src/: box.cpp  coord.cpp  grid.cpp  object.cpp
engine/world/: CMakeLists.txt  world.hpp
engine/world/lib/: item.hpp  space.hpp  terrain.hpp
engine/world/src/: item.cpp  space.cpp  terrain.cpp
src/: main.cpp
test/: CMakeLists.txt  container.cpp  test2.cpp  testAll.cpp
test/engine/: CMakeLists.txt
test/engine/container/: CMakeLists.txt  container.cpp
test/engine/world/: CMakeLists.txt  world.cpp
